k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ladder-game
  labels:
    name: ladder-game
