k8s/backend3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-mapper
  namespace: ladder-game
  labels:
    app: result-mapper
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result-mapper
  template:
    metadata:
      labels:
        app: result-mapper
    spec:
      containers:
      - name: result-mapper
        image: 44ce789b-kr1-registry.container.nhncloud.com/container-platform-registry/result-mapper:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "0.3"
            memory: "256Mi"
          requests:
            cpu: "0.1"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
      imagePullSecrets:
      - name: ncr
---
apiVersion: v1
kind: Service
metadata:
  name: result-mapper-service
  namespace: ladder-game
spec:
  selector:
    app: result-mapper
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
